# EG3D

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  config
data/: Normal.pcd  edge_points.pcd  orignal.pcd
include/: BaseCloud.h  BoundingBox.h  EdgeCloud.h  EdgePoints.h  RawCloud.h  Region2D.h
src/: BaseCloud.cpp  BoundingBox.cpp  EdgeCloud.cpp  EdgePoints.cpp  RawCloud.cpp  Region2D.cpp  main.cpp
